--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         including <strong>steel, concrete,</strong> and newly available <strong>insulated glass,</strong> the mainstays of midcentury-modern architecture 
         remain appealing to this day."</p>
     <p>Source: <a href="https://www.architecturaldigest.com/story/midcentury-modern-architecture-everything-you-should-know">Architectural Digest</a>.
-    <p><img src="https://github.com/silacanss/silacanss.github.io/blob/main/midcentury.jpg?raw=true" alt="midcentury modern image" width="300"></p>
+    <p>
+      <img src="https://raw.githubusercontent.com/silacanss/silacanss.github.io/main/midcentury.jpg" alt="midcentury modern image" width="300">
+   </p>
    </body>
 </html>
